--- a/extra/komikku/PKGBUILD
+++ b/extra/komikku/PKGBUILD
@@ -1,12 +1,13 @@
 # Maintainer: Balló György <ballogyor+arch at gmail dot com>
 
 pkgname=komikku
-pkgver=1.79.1
-pkgrel=2
+pkgver=1.82.0
+pkgrel=1
 pkgdesc='Manga and comics reader for GNOME'
 arch=(any)
 url='https://apps.gnome.org/Komikku/'
 license=(GPL-3.0-or-later)
+groups=(gnome-circle)
 depends=(
   dconf
   glib2
@@ -31,7 +32,6 @@ depends=(
   python-natsort
   python-piexif
   python-pillow
-  python-pillow-heif
   python-pytz
   python-rarfile
   python-regex
@@ -48,7 +48,7 @@ makedepends=(
   meson
 )
 source=("git+https://codeberg.org/valos/Komikku.git#tag=v$pkgver")
-b2sums=('53af97a5e6bf076d3ecc635c4b75d4d58f88a8d15388ad28ae4c3cd314b490d9385b1b68a5915b4c39a5563c42b227731405845b6af8177c5b2040422c7d0e14')
+b2sums=(2190ff01569946a5d9588280d7e2b77c78b2e1458bcd236acaaf086cc2c5b2d242d0736e04a730274e5a2884e488d62f5e56fcb8c4335eacd6e07cabc4be02cb)
 
 build() {
   arch-meson Komikku build
