--- a/extra/cmctl/.nvchecker.toml
+++ b/extra/cmctl/.nvchecker.toml
@@ -1,4 +1,4 @@
 [cmctl]
 source = "git"
-git = "https://github.com/jetstack/cert-manager.git"
+git = "https://github.com/cert-manager/cmctl.git"
 prefix = "v"
