--- a/extra/cmctl/PKGBUILD
+++ b/extra/cmctl/PKGBUILD
@@ -1,62 +1,66 @@
 # Maintainer: Christian Rebischke <chris.rebischke@archlinux.org>
+# Maintainer: Carl Smedstad <carsme@archlinux.org>
 # Contributor: ml <>
+
 pkgname=cmctl
-pkgver=1.17.1
-pkgrel=1
-pkgdesc='Automatically provision and manage TLS certificates in Kubernetes'
-arch=('x86_64' 'aarch64')
-url='https://github.com/jetstack/cert-manager'
-license=('Apache')
-depends=('kubectl')
-makedepends=('git' 'go')
-groups=('kubectl-plugins')
-source=("$url/archive/v$pkgver/$pkgname-$pkgver.tar.gz")
-sha512sums=('975a7831fe82e3cb02a454f96a757556a06603d8f8be7cfc5d8b93daeb60ccd1c7a2a53b040f20faa1c6df3b438d98a97890940abc7630db225690964b72d432')
-b2sums=('f303fa23f1abef8f384b0faab9708c89b4e0ef471fb6dafb68fbbf02d81029c662b5250e3e7d9c352e7558990d3192207085945ae983f1956326f66c7b04121b')
+pkgver=2.3.0
+pkgrel=2
+pkgdesc='CLI tool manage and configure cert-manager resources for Kubernetes'
+arch=('x86_64')
+url='https://github.com/cert-manager/cmctl'
+license=('Apache-2.0')
+depends=('glibc')
+makedepends=(
+  'git'
+  'go'
+)
+source=("git+$url.git#tag=v$pkgver")
+sha512sums=('9134bce0de2ea962afc60e5a743d5419bad7fbf0ec2f2c2506227bccacae27dc1581b509ef040aa42f63a63a3e4f41f7e3c9b2b8abcb3b6173df4e4242954576')
+b2sums=('2bc9301c9dbea9b9aaf0580e64b320056d1ce47cf2ca335aa006bcccd67db698efe3e22761d417e3004ded6927832a43e7711fb8e9c6591ba9b611a6b8d9ce24')
+
+prepare() {
+  cd $pkgname
+  GOFLAGS="-mod=readonly" go mod vendor -v
+}
 
 build() {
-  local _x _commit
-  _commit=$(bsdcat "$pkgname-$pkgver.tar.gz" | git get-tar-commit-id)
-  _x=(
-    AppVersion="v$pkgver"
-    AppGitCommit="${_commit:?}"
-    AppGitState="clean"
-  )
-
-  cd cert-manager-"$pkgver"
-  export CGO_ENABLED=1
-  export CGO_LDFLAGS="$LDFLAGS"
+  cd $pkgname
   export CGO_CFLAGS="$CFLAGS"
   export CGO_CPPFLAGS="$CPPFLAGS"
   export CGO_CXXFLAGS="$CXXFLAGS"
-  export GOFLAGS='-buildmode=pie -trimpath -modcacherw -mod=readonly'
-  cd ./cmd/controller
-  go build -ldflags="-linkmode=external ${_x[*]/#/-X=github.com/jetstack/cert-manager/pkg/util.} 
-  -X github.com/jetstack/cert-manager/cmd/controller/pkg/build.name=cmctl 
-  -X github.com/jetstack/cert-manager/cmd/controller/pkg/build/commands.registerCompletion=true" .
+  export CGO_LDFLAGS="$LDFLAGS"
+  export GOFLAGS="-buildmode=pie -mod=vendor -modcacherw -buildvcs=false"
+  export GOPATH="$srcdir"
+
+  local ld_flags=" \
+    -compressdwarf=false \
+    -linkmode=external \
+    -X 'github.com/cert-manager/cert-manager/pkg/util.AppGitCommit=$(git rev-parse --short HEAD)' \
+    -X 'github.com/cert-manager/cert-manager/pkg/util.AppGitState=clean' \
+    -X 'github.com/cert-manager/cert-manager/pkg/util.AppVersion=$pkgver' \
+  "
+
+  go build -v -ldflags "$ld_flags" -o build/
 }
 
 check() {
-  cd cert-manager-"$pkgver"/cmd/controller
-  # we don't want e2e and other tests that explicitly want bazel
-  # Disable tests, because of broken go mod
-  # go test -short ...
+  cd $pkgname
+  local unit_tests=$(
+    go list ./... \
+      | grep -v github.com/cert-manager/cmctl/v2/test/integration \
+  )
+  # shellcheck disable=SC2086
+  go test -v $unit_tests
 }
 
 package() {
-  cd cert-manager-"$pkgver"/cmd/controller
-  ls
-  install -Dm755 controller-binary "$pkgdir"/usr/bin/cmctl
+  cd $pkgname
+  install -vDm755 -t "$pkgdir/usr/bin" build/cmctl
 
-  # build bash completions
-  #mkdir -p "${pkgdir}/usr/share/bash-completion/completions"
-  #"$pkgdir"/usr/bin/cmctl completion bash > "${pkgdir}/usr/share/bash-completion/completions/cmctl"
-
-  ## build zsh completions
-  #mkdir -p "${pkgdir}/usr/share/zsh/site-functions"
-  #"$pkgdir"/usr/bin/cmctl completion zsh > "${pkgdir}/usr/share/zsh/site-functions/_cmctl"
-
-  ## build fish completions
-  #mkdir -p "${pkgdir}/usr/share/fish/vendor_completions.d/"
-  #"$pkgdir"/usr/bin/cmctl completion fish > "${pkgdir}/usr/share/fish/vendor_completions.d/cmctl.fish"
+  ./build/cmctl completion bash > cmctl.bash
+  install -vDm644 cmctl.bash "$pkgdir/usr/share/bash-completion/completions/cmctl"
+  ./build/cmctl completion fish > cmctl.fish
+  install -vDm644 cmctl.fish "$pkgdir/usr/share/fish/vendor_completions.d/cmctl.fish"
+  ./build/cmctl completion zsh > cmctl.zsh
+  install -vDm644 cmctl.zsh "$pkgdir/usr/share/zsh/site-functions/_cmctl"
 }
