--- a/extra/rofimoji/PKGBUILD
+++ b/extra/rofimoji/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Daniel M. Capella <polyzen@archlinux.org>
 
 pkgname=rofimoji
-pkgver=6.5.0
-pkgrel=2
+pkgver=6.6.0
+pkgrel=1
 pkgdesc='Emoji, unicode and general character picker for rofi and rofi-likes'
 arch=(any)
 url=https://github.com/fdw/rofimoji
@@ -11,8 +11,8 @@ depends=(python-configargparse)
 makedepends=(
   git
   python-build
+  python-hatchling
   python-installer
-  python-poetry-core
 )
 optdepends=(
   'emoji-font: for the emojis character file'
@@ -33,10 +33,11 @@ optdepends=(
   'wmenu: for one of the Wayland selectors'
   'wofi: for one of the Wayland selectors'
   'wl-clipboard: for the Wayland clipboarder'
-  'wtype: for the Wayland typer'
+  'wtype: for one of the Wayland typers'
+  'ydotool: for one of the Wayland typers'
 )
 source=("git+$url.git#tag=$pkgver")
-b2sums=('70ca4e376db58604fcb7438ad5250257cb8265eb2f833917c48e9da231c401508a624812fb26745fe4fb95584fe0d36796d18c37dfd93f9b9b039dc7796ab40d')
+b2sums=('0310025491fed6b3ca8c1742f8da5583bbb646e1f88b67cfcca680f219e71c5ac109382e9bcc7322d1906fbf77a3364033283b993abe2dd75243e82cc692ae60')
 
 prepare() {
   cd $pkgname
@@ -52,7 +53,7 @@ build() {
 package() {
   local site_packages=$(python -c "import site; print(site.getsitepackages()[0])")
   install -d "$pkgdir"/usr/share/licenses/$pkgname
-  ln -s "$site_packages"/$pkgname-$pkgver.dist-info/LICENSE \
+  ln -s "$site_packages"/$pkgname-$pkgver.dist-info/licenses/LICENSE \
     "$pkgdir"/usr/share/licenses/$pkgname/LICENSE
 
   cd $pkgname
