--- a/extra/khard/PKGBUILD
+++ b/extra/khard/PKGBUILD
@@ -2,62 +2,52 @@
 # Maintainer: Daniel M. Capella <polyzen@archlinux.org>
 
 pkgname=khard
-pkgver=0.19.1
-pkgrel=4
+pkgver=0.20.0
+pkgrel=1
 pkgdesc='Console address book manager'
-arch=('any')
+arch=(any)
 url=https://github.com/lucc/khard
 license=(GPL-3.0-only)
 depends=(
-  'python'
-  'python-atomicwrites'
-  'python-configobj'
-  'python-ruamel-yaml'
-  'python-unidecode'
-  'python-vobject'
+  python
+  python-configobj
+  python-ruamel-yaml
+  python-vobject
 )
 makedepends=(
-  'git'
-  'python-build'
-  'python-installer'
-  'python-setuptools-scm'
-  'python-sphinx'
-  'python-sphinx-autoapi'
-  'python-sphinx-autodoc-typehints'
-  'python-wheel'
+  git
+  python-build
+  python-installer
+  python-setuptools-scm
+  python-sphinx
+  python-sphinx-argparse
+  python-sphinx-autoapi
+  python-sphinx-autodoc-typehints
+  python-wheel
 )
 checkdepends=('python-pytest')
 optdepends=(
   'diffutils: Using sdiff_khard_wrapper.sh'
   'vdirsyncer: Synchronization of address books with a DAV server'
 )
-source=(
-  $pkgname-$pkgver.tar.gz::$url/archive/refs/tags/v$pkgver.tar.gz
-  $pkgname-0.19.1-disable-deprecationwarning.patch
-)
-b2sums=('9a3783235b910a543402ba47f98f23a59febdee72985740e0afefa0f27833405f0a0415022848cef495e2718676208c1be093b92fea436f567c4d5cf55be4472'
-        '048fc62d868a4da4e7c712af4f570be797a09a4d0ef58491ecbbfc98ed3c7b403fbd5f6536e13962ecafc21faec6556958b284f28d2814846b7ef2f7e0748616')
-
-prepare() {
-  # disable DeprecationWarning as it breaks core functionality: https://github.com/lucc/khard/issues/335
-  patch -Np1 -d $pkgname-$pkgver -i ../$pkgname-0.19.1-disable-deprecationwarning.patch
-}
+source=("git+$url.git#tag=v$pkgver")
+b2sums=('ed8e44eec02bef03469be26810f1f067c25cafa74bd8bc5e6e1a3f83223627058c456cc71dc4d1b4a7acdf073703dab96b3315e03a5b53703a72258ce3bc9a76')
 
 build() {
-  cd $pkgname-$pkgver
+  cd $pkgname
   SETUPTOOLS_SCM_PRETEND_VERSION=$pkgver python -m build --wheel --skip-dependency-check --no-isolation
   make -C doc man
 }
 
 check() {
-  cd $pkgname-$pkgver
+  cd $pkgname
   pytest -v
 }
 
 package() {
   local site_packages=$(python -c "import site; print(site.getsitepackages()[0])")
 
-  cd $pkgname-$pkgver
+  cd $pkgname
   python -m installer --destdir="$pkgdir" dist/*.whl
   # additional wrapper script
   install -vD misc/sdiff/sdiff_${pkgname}_wrapper.sh \
@@ -75,8 +65,8 @@ package() {
     -t "$pkgdir"/usr/share/doc/$pkgname/
   # man
   install -vDm 644 doc/build/man/$pkgname.1 \
-    -t "${pkgdir}/usr/share/man/man1"
+    -t "$pkgdir"/usr/share/man/man1
   install -vDm 644 doc/build/man/$pkgname.conf.5 \
-    -t "${pkgdir}/usr/share/man/man5"
-  install -vDm 644 $pkgname/data/{config.spec,template.yaml} -t "$pkgdir/$site_packages/$pkgname/data/"
+    -t "$pkgdir"/usr/share/man/man5
+  install -vDm 644 $pkgname/data/{config.spec,template.yaml} -t "$pkgdir/$site_packages"/$pkgname/data/
 }
