--- a/extra/xssstate/PKGBUILD
+++ b/extra/xssstate/PKGBUILD
@@ -1,9 +1,9 @@
 pkgname=xssstate
 pkgver=1.1
-pkgrel=6
+pkgrel=7
 pkgdesc='A simple tool to retrieve the X screensaver state'
 arch=('x86_64')
-url="https://tools.suckless.org/$pkgname"
+url="https://tools.suckless.org/x/$pkgname"
 license=('MIT')
 depends=('libxss' 'sh')
 source=("https://dl.suckless.org/tools/$pkgname-1.1.tar.gz")
