--- a/extra/gcolor3/PKGBUILD
+++ b/extra/gcolor3/PKGBUILD
@@ -2,28 +2,51 @@
 
 pkgname=gcolor3
 pkgver=2.4.0
-pkgrel=8
+pkgrel=9
 pkgdesc='Simple color chooser written in GTK'
-arch=('x86_64')
+arch=(x86_64)
 url='https://www.hjdskes.nl/projects/gcolor3/'
-license=('GPL-2.0-or-later')
-depends=('at-spi2-core' 'cairo' 'gdk-pixbuf2' 'glibc' 'glib2' 'gtk3' 'hicolor-icon-theme'
-         'libhandy' 'libportal' 'libportal-gtk3')
-makedepends=('git' 'glib2-devel' 'appstream-glib' 'meson')
-conflicts=('gcolor3-xorg')
-replaces=('gcolor3-xorg')
-source=("git+https://gitlab.gnome.org/World/$pkgname.git#tag=v$pkgver"
-        'gcolor3-156.patch'
-        'gcolor3-157.patch'
-        'gcolor3-158.patch'
-        'gcolor3-159.patch'
-        'gcolor3-160.patch')
-b2sums=('9208f76f6679dc5afbb805e074cf60c0d34ad0e84eea3f963010526322f20e53e8b5ddfda1b8588f431fcddd38783c7ad4c0caa2e8b8b40c5a84e19750b5ee17'
-        '440dc524a4efaebd69b2bc2393c653b6b55a48e1b601950cdaf6eec18836d438e33502aea1d8089091e58de3438224188439db92016ece1a24b35c43dd40d161'
-        '14e26a09613e2c1df501b86b96e3caef1989040698888744e2ff62a6b97ff6d3e08801b17f6eaabfe650f5c5e20b9884cb4142a43bdb53bc0f3354efbe5ad710'
-        'e97892e4f28f385431c099d7e45b937abed056e51dcd0d7c2107f84abe0e6ac980ef538044fa7d5bf598a1560b2863ea6233eb307fa6a3b7549b2a221c7933af'
-        '09c506cca0b6db1b218f0ac07ab8fb9f1cacd03ee64ff51e21b691fcf60719702644d1ff4dd48b1f640aa75c94da125257138620ced5e03562fa6d3018c4e566'
-        'c73a69e6e3758665c699c39d5d69cb84a126409d91b872ee2c3b4e7d768fc6df658b614ee7e822049f96cb692cc96bba97a22c19a07645b38633dc32186364d7')
+license=(GPL-2.0-or-later)
+depends=(
+  at-spi2-core
+  cairo
+  gdk-pixbuf2
+  glib2
+  glibc
+  gtk3
+  hicolor-icon-theme
+  libhandy
+  libportal
+  libportal-gtk3
+)
+makedepends=(
+  appstream
+  git
+  glib2-devel
+  meson
+)
+conflicts=(gcolor3-xorg)
+replaces=(gcolor3-xorg)
+source=(
+  "git+https://gitlab.gnome.org/World/$pkgname.git#tag=v$pkgver"
+  gcolor3-156.patch
+  gcolor3-157.patch
+  gcolor3-158.patch
+  gcolor3-159.patch
+  gcolor3-160.patch
+  gcolor3-163.patch
+  gcolor3-164.patch
+)
+b2sums=(
+  9208f76f6679dc5afbb805e074cf60c0d34ad0e84eea3f963010526322f20e53e8b5ddfda1b8588f431fcddd38783c7ad4c0caa2e8b8b40c5a84e19750b5ee17
+  440dc524a4efaebd69b2bc2393c653b6b55a48e1b601950cdaf6eec18836d438e33502aea1d8089091e58de3438224188439db92016ece1a24b35c43dd40d161
+  14e26a09613e2c1df501b86b96e3caef1989040698888744e2ff62a6b97ff6d3e08801b17f6eaabfe650f5c5e20b9884cb4142a43bdb53bc0f3354efbe5ad710
+  e97892e4f28f385431c099d7e45b937abed056e51dcd0d7c2107f84abe0e6ac980ef538044fa7d5bf598a1560b2863ea6233eb307fa6a3b7549b2a221c7933af
+  dc46c217e1ea24b1068e26de1847b8d6e9c05763f986e2fbaa2212df059ff4c2916600c2d02aad8738a264e1200995fff7853956e565b89b2b29584df72d341d
+  c73a69e6e3758665c699c39d5d69cb84a126409d91b872ee2c3b4e7d768fc6df658b614ee7e822049f96cb692cc96bba97a22c19a07645b38633dc32186364d7
+  f051179de68a0037d4ba116361d0b5d51f259b3386511e5d88c52fbae9b16c124c0b01ac2197775614d0c73aeee4d7f682ce320c338d0bd13ba777f104e4ac7b
+  51f6b88a0576cff9624ab7a58f0d486e0c6eaf108419b192e5230c0b0ad5e187722d83576bc48bc431ebbc502908a34c6a40f8d5de508a05ba3f666c76d4d16d
+)
 
 prepare() {
   cd $pkgname
@@ -48,6 +71,12 @@ prepare() {
 
   # https://gitlab.gnome.org/World/gcolor3/-/merge_requests/160
   git apply -3 ../gcolor3-160.patch
+
+  # https://gitlab.gnome.org/World/gcolor3/-/merge_requests/163
+  git apply -3 ../gcolor3-163.patch
+
+  # https://gitlab.gnome.org/World/gcolor3/-/merge_requests/164
+  git apply -3 ../gcolor3-164.patch
 }
 
 build() {
@@ -56,7 +85,7 @@ build() {
 }
 
 check() {
-  meson test -C build
+  meson test -C build --print-errorlogs
 }
 
 package() {
