--- a/extra/python-lxml-html-clean/.nvchecker.toml
+++ b/extra/python-lxml-html-clean/.nvchecker.toml
@@ -1,3 +1,3 @@
 [python-lxml-html-clean]
-source = "pypi"
-pypi = "lxml-html-clean"
+source = "git"
+git = "https://github.com/fedora-python/lxml_html_clean.git"
