--- a/extra/soundconverter/PKGBUILD
+++ b/extra/soundconverter/PKGBUILD
@@ -5,12 +5,13 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=soundconverter
-pkgver=4.1.0
+pkgver=4.1.1
 pkgrel=1
 pkgdesc='A simple sound converter application for GNOME'
 arch=(any)
-license=(GPL3)
+license=(GPL-3.0-only)
 url=https://soundconverter.org
+_url="https://github.com/kassoulet/$pkgname"
 depends=(desktop-file-utils
          gst-plugins-good
          gst-plugins-ugly
@@ -22,8 +23,8 @@ makedepends=(python-{build,installer,wheel}
 #depends=(gst-plugins-base gst-plugins-good gtk3 libnotify python-gobject)
 #makedepends=(intltool python-distutils-extra)
 _archive="$pkgname-$pkgver"
-source=("https://launchpad.net/soundconverter/trunk/$pkgver/+download/$_archive.tar.gz")
-sha256sums=('5ce06ac7113f0ca33b770eb79d6b26416e650a6148db80b06e9a1bfc82b4a81e')
+source=("$_url/archive/refs/tags/$pkgver/$_archive.tar.gz")
+sha256sums=('8ac117e8e7668179b5dd88eb761976221cee63995d87d68b89b0059d5597a02a')
 
 build() {
   cd "$_archive"
