Updated hledger-ui 1.32.1-188

--- a/extra/hledger-ui/PKGBUILD
+++ b/extra/hledger-ui/PKGBUILD
@@ -4,22 +4,25 @@
 
 pkgname=hledger-ui
 pkgver=1.32.1
-pkgrel=187
+pkgrel=188
 pkgdesc="Curses-style terminal interface for the hledger accounting system"
 url="http://hledger.org"
-license=("GPL")
+license=('GPL-3.0-or-later')
 arch=('x86_64')
 depends=('ghc-libs' 'hledger' 'haskell-hledger-lib' 'haskell-ansi-terminal' 'haskell-async'
          'haskell-cmdargs' 'haskell-data-default' 'haskell-doclayout' 'haskell-extra'
          'haskell-fsnotify' 'haskell-microlens' 'haskell-microlens-platform' 'haskell-megaparsec'
          'haskell-safe' 'haskell-split' 'haskell-text-zipper' 'haskell-vector' 'haskell-brick'
-         'haskell-vty5')
+         'haskell-vty')
 makedepends=('ghc' 'uusi')
-source=("https://hackage.haskell.org/packages/archive/${pkgname}/${pkgver}/${pkgname}-${pkgver}.tar.gz")
-sha512sums=('f28fa45e6db0c6f2853470aabd72eb2436fa577c74eac74dbcc3284a8f0058e75741f702b46a1f283c5e5510467ac9895fc4d63ff1c27a03da27ad9dba7bb71f')
+source=("https://hackage.haskell.org/packages/archive/${pkgname}/${pkgver}/${pkgname}-${pkgver}.tar.gz"
+        vty6.patch)
+sha512sums=('f28fa45e6db0c6f2853470aabd72eb2436fa577c74eac74dbcc3284a8f0058e75741f702b46a1f283c5e5510467ac9895fc4d63ff1c27a03da27ad9dba7bb71f'
+            '1bd0d4c1ab204b85cb67f9b1271d809771ce9e5ce2f9c6d41fca31b7dad8cc8a7761852cb49f1066aa8a7bb3e12cef2b630e63e57da95b82cf1a9ca5d8766c07')
 
 prepare() {
     cd $pkgname-$pkgver
+    patch -p2 -i ../vty6.patch
     uusi -u megaparsec
 }
 
