Updated cozy-desktop 3.43.1-1

--- a/extra/cozy-desktop/PKGBUILD
+++ b/extra/cozy-desktop/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: loqs <bugs-archlinux@entropy-collector.net>
 
 pkgname=cozy-desktop
-pkgver=3.42.0
+pkgver=3.43.1
 pkgrel=1
 pkgdesc="File synchronisation for Cozy Cloud on Desktop"
 arch=(x86_64)
@@ -13,11 +13,11 @@ _electron=electron31
 depends=(${_electron})
 makedepends=(nodejs yarn git node-gyp python)
 source=(https://github.com/cozy-labs/${pkgname}/archive/v${pkgver/b/-beta.}/${pkgname}-${pkgver/b/-beta.}.tar.gz
-        https://github.com/cozy-labs/${pkgname}/releases/download/v${pkgver/b/-beta.}/Cozy-Drive-${pkgver/b/-beta.}-x86_64.AppImage
+        Cozy-Drive-${pkgver/b/-beta.}-x86_64.AppImage::https://github.com/cozy-labs/${pkgname}/releases/download/v${pkgver/b/-beta.}/Cozy-Drive-x86_64.AppImage
         ${pkgname}.desktop
         ${pkgname}.sh)
-sha256sums=('b5162a219d7f0ab588ff3880f2c1357cfabae45f04d2d0e1946d1b76faef7d07'
-            'd4cb11c4ba7e2190288fdcaaa399f437591f458998476b632239e56d13eb287e'
+sha256sums=('f4c3a233ea1ef71456e4038baac6f1400aae5d6dbca65863be1d6e483fa77b17'
+            'f96f237de1fa795ad1973e219b1413c5e3407a3ea7a0c43aaae270a760043e43'
             '563edd5a43c7f06080e03bec5f4e46154227f7e163500950ea39ecad466b198a'
             'a8783d3f6ce2da344ffe403f8e1a4f9da8de3b59e8bfda10e15a4ff5643244cf')
 
