--- a/extra/rofimoji/PKGBUILD
+++ b/extra/rofimoji/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=rofimoji
 pkgver=6.6.0
-pkgrel=1
+pkgrel=2
 pkgdesc='Emoji, unicode and general character picker for rofi and rofi-likes'
 arch=(any)
 url=https://github.com/fdw/rofimoji
@@ -18,7 +18,7 @@ optdepends=(
   'emoji-font: for the emojis character file'
   'nerd-fonts: for the nerd_font character file'
   'otf-font-awesome: for the fontawesome6 character file'
-  'ttf-font-awesome: for the fontawesome6 character file'
+  'woff2-font-awesome: for the fontawesome6 character file'
 
   'bemenu: for a generic selector'
 
