--- a/extra/discord/PKGBUILD
+++ b/extra/discord/PKGBUILD
@@ -6,7 +6,7 @@
 
 pkgname=discord
 _pkgname=Discord
-pkgver=0.0.102
+pkgver=0.0.103
 pkgrel=1
 epoch=1
 pkgdesc="All-in-one voice and text chat for gamers"
@@ -20,9 +20,9 @@ optdepends=('libpulse: PulseAudio support'
 source=("https://dl.discordapp.net/apps/linux/$pkgver/$pkgname-$pkgver.tar.gz"
         "LICENSE-$pkgver.html::https://discordapp.com/terms"
         "OSS-LICENSES-$pkgver.html::https://discordapp.com/licenses")
-sha512sums=('a040994b92deb07743139aa5c5084c0123a5fd55be0fd0f949d79f56e62250e7c10935e48c0301a499b9d3a86fb3bd9e1dc183a3223f447db4bab004baa36d57'
-            'f1996dfb892eb646b94f008a7bb01c7d299556a3061a891e070e0a18dbd1fbe21eae174f4d64f497475386230c3e1e82d7cf54dcf71ade87d8e0cbd9a63f4c01'
-            '2a48f6c6d7432543030842fd5f4f99884d65acde0266df1c7c36c1f99ed4cb77e5e1e54364d25c05abc6e736b2045705eba6660a3cdb5ca728d8d092d87da71f')
+sha512sums=('ac6b299df72a14cbd5ae33f4cdb7aca4d39f7925b3f1ea170bd82b71b403d7acb5397c03c020de959196fe2dcf4114274fb2fad6656df85fd54253eb2d5fa2c1'
+            'SKIP'
+            'SKIP')
 
 prepare() {
   cd $_pkgname
