--- a/extra/mpop/PKGBUILD
+++ b/extra/mpop/PKGBUILD
@@ -4,12 +4,12 @@
 
 pkgname=mpop
 pkgver=1.4.21
-pkgrel=1
+pkgrel=2
 pkgdesc="A small, fast POP3 client suitable as a fetchmail replacement"
 arch=('x86_64')
 url="https://marlam.de/mpop/"
-license=('GPL3')
-depends=('gnutls' 'libidn' 'libsecret')
+license=('GPL-3.0-or-later')
+depends=('gnutls' 'libidn2' 'libsecret')
 install=mpop.install
 source=("https://marlam.de/mpop/releases/mpop-${pkgver}.tar.xz"{,.sig})
 sha256sums=('4ca0d1e0d01366fe3e0cf490d88d154df511278fb595638713be3ca675665855'
