--- a/extra/tigervnc/PKGBUILD
+++ b/extra/tigervnc/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=tigervnc
 pkgver=1.15.0
-pkgrel=2
+pkgrel=3
 _xorgver=21.1.15
 pkgdesc="Suite of VNC servers and clients based on the VNC 4 branch of TightVNC"
 arch=('x86_64')
@@ -18,7 +18,6 @@ depends=(
   'gmp'
   'gnutls'
   'hicolor-icon-theme'
-  'java-runtime=8'
   'libgl'
   'libjpeg-turbo'
   'libunwind'
@@ -53,10 +52,14 @@ makedepends=(
   'imagemagick'
   'java-environment=8'
   'nasm'
+  'strip-nondeterminism'
   'xorg-font-util'
   'xorg-util-macros'
   'xorgproto'
   'xtrans'
+)
+optdepends=(
+  'java-runtime: for java-based client'
 )
 conflicts=('tightvnc')
 backup=(
@@ -145,4 +148,6 @@ package() {
   cd unix/xserver/hw/vnc
   make DESTDIR="$pkgdir" install
   install -Dm0755 "$srcdir"/Xsession "$pkgdir"/etc/X11/tigervnc/Xsession
+
+  strip-nondeterminism "$pkgdir"/usr/share/vnc/classes/VncViewer.jar
 }
