--- a/extra/stack/PKGBUILD
+++ b/extra/stack/PKGBUILD
@@ -3,10 +3,10 @@
 
 pkgname=stack
 pkgver=2.9.1
-pkgrel=191
+pkgrel=192
 pkgdesc="The Haskell Tool Stack"
 url="https://github.com/commercialhaskell/stack"
-license=("BSD")
+license=('BSD-3-Clause')
 arch=('x86_64')
 depends=('ghc-libs' 'haskell-aeson' 'haskell-annotated-wl-pprint' 'haskell-ansi-terminal'
          'haskell-async' 'haskell-attoparsec' 'haskell-base64-bytestring' 'haskell-casa-client'
