--- a/extra/haskell-bsb-http-chunked/PKGBUILD
+++ b/extra/haskell-bsb-http-chunked/PKGBUILD
@@ -3,10 +3,10 @@
 _hkgname=bsb-http-chunked
 pkgname=haskell-bsb-http-chunked
 pkgver=0.0.0.4
-pkgrel=424
+pkgrel=425
 pkgdesc="Chunked HTTP transfer encoding for bytestring builders"
 url="https://github.com/sjakobi/bsb-http-chunked"
-license=('BSD')
+license=('BSD-3-Clause')
 arch=('x86_64')
 depends=('ghc-libs')
 makedepends=('ghc' 'uusi' 'haskell-attoparsec' 'haskell-blaze-builder' 'haskell-hedgehog' 'haskell-tasty'
