--- a/extra/dhall-lsp-server/PKGBUILD
+++ b/extra/dhall-lsp-server/PKGBUILD
@@ -2,10 +2,10 @@
 
 pkgname=dhall-lsp-server
 pkgver=1.1.3
-pkgrel=123
+pkgrel=124
 pkgdesc="Language Server Protocol (LSP) server for Dhall"
 url="https://github.com/dhall-lang/dhall-haskell/tree/master/dhall-lsp-server#readme"
-license=("custom:MIT")
+license=("MIT")
 arch=('x86_64')
 depends=('ghc-libs' 'haskell-aeson' 'haskell-aeson-pretty' 'haskell-data-default' 'dhall'
          'dhall-json' 'haskell-lsp1.4' 'haskell-hslogger' 'haskell-lens' 'haskell-lens-family-core'
