--- a/extra/xmonad/PKGBUILD
+++ b/extra/xmonad/PKGBUILD
@@ -6,11 +6,11 @@
 
 pkgname=xmonad
 pkgver=0.18.0
-pkgrel=72
+pkgrel=73
 pkgdesc='Lightweight X11 tiled window manager written in Haskell'
 url='https://xmonad.org/'
 arch=('x86_64')
-license=('BSD')
+license=('BSD-3-Clause')
 depends=('ghc' 'haskell-x11' 'haskell-data-default-class' 'haskell-setlocale')
 makedepends=('gendesk' 'pandoc' 'haskell-quickcheck' 'haskell-quickcheck-instances' 'haskell-quickcheck-classes')
 optdepends=('xorg-xmessage: for displaying visual error messages')
