--- a/extra/haskell-named-text/PKGBUILD
+++ b/extra/haskell-named-text/PKGBUILD
@@ -3,7 +3,7 @@
 _hkgname=named-text
 pkgname=haskell-named-text
 pkgver=1.2.1.0
-pkgrel=1
+pkgrel=2
 pkgdesc="A parameterized named text type and associated functionality."
 url="https://github.com/kquick/named-text"
 license=("ISC")
@@ -23,14 +23,14 @@ prepare() {
 build() {
   cd $_hkgname-$pkgver
 
-  runhaskell Setup configure -O --enable-shared --enable-executable-dynamic --disable-library-vanilla \
+  runhaskell Setup configure -O --enable-shared --enable-debug-info --enable-executable-dynamic --disable-library-vanilla \
     --prefix=/usr --docdir=/usr/share/doc/$pkgname --datasubdir=$pkgname --enable-tests \
     --dynlibdir=/usr/lib --libsubdir=\$compiler/site-local/\$pkgid \
     --ghc-option=-optl-Wl\,-z\,relro\,-z\,now \
     --ghc-option='-pie' \
     -fwith-json
 
-  runhaskell Setup build
+  runhaskell Setup build $MAKEFLAGS
   runhaskell Setup register --gen-script
   runhaskell Setup unregister --gen-script
   sed -i -r -e "s|ghc-pkg.*update[^ ]* |&'--force' |" register.sh
@@ -39,7 +39,7 @@ build() {
 
 check() {
   cd $_hkgname-$pkgver
-  runhaskell Setup test
+  runhaskell Setup test --show-details=direct
 }
 
 package() {
