Updated haskell-ghcide 2.0.0.0-80

--- a/extra/haskell-ghcide/PKGBUILD
+++ b/extra/haskell-ghcide/PKGBUILD
@@ -3,10 +3,10 @@
 _hkgname=ghcide
 pkgname=haskell-ghcide
 pkgver=2.0.0.0
-pkgrel=79
+pkgrel=80
 pkgdesc="The core of an IDE"
 url="https://github.com/haskell/haskell-language-server/tree/master/ghcide#readme"
-license=("Apache")
+license=("Apache-2.0")
 arch=('x86_64')
 depends=('ghc-libs' 'haskell-diff' 'haskell-glob' 'haskell-aeson' 'haskell-aeson-pretty'
          'haskell-async' 'haskell-base16-bytestring' 'haskell-case-insensitive'
