--- a/extra/stack/REUSE.toml
+++ b/extra/stack/REUSE.toml
@@ -24,6 +24,7 @@ SPDX-License-Identifier = "0BSD"
 [[annotations]]
 path = [
     "stack-persistent-2.14.patch",
+    "stack-pantry-0.6.patch",
 ]
 SPDX-FileCopyrightText = "stack contributors"
 SPDX-License-Identifier = "BSD-3-Clause"
