--- a/extra/vaultwarden/REUSE.toml
+++ b/extra/vaultwarden/REUSE.toml
@@ -9,7 +9,9 @@ path = [
     ".nvchecker.toml",
     "*.install",
     "*.sysusers",
+    "*sysusers.conf",
     "*.tmpfiles",
+    "*tmpfiles.conf",
     "*.logrotate",
     "*.pam",
     "*.service",
@@ -17,8 +19,6 @@ path = [
     "*.timer",
     "*.desktop",
     "*.hook",
-    "sysusers.conf",
-    "tmpfiles.conf",
 ]
 SPDX-FileCopyrightText = "Arch Linux contributors"
 SPDX-License-Identifier = "0BSD"
