--- a/extra/protobuf/PKGBUILD
+++ b/extra/protobuf/PKGBUILD
@@ -11,7 +11,7 @@
 pkgbase='protobuf'
 pkgname=('protobuf' 'python-protobuf' 'ruby-google-protobuf')
 pkgver=31.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Protocol Buffers - Google's data interchange format"
 arch=('x86_64')
 url='https://developers.google.com/protocol-buffers/'
@@ -162,6 +162,7 @@ package_ruby-google-protobuf() {
   depends=(
     'ruby'
     'ruby-bigdecimal'
+    'ruby-rake'
   )
 
   cp -a $pkgbase/ruby/tmp_install/* "$pkgdir"
