Updated metadata-cleaner 2.5.6-4

--- a/extra/metadata-cleaner/PKGBUILD
+++ b/extra/metadata-cleaner/PKGBUILD
@@ -2,10 +2,10 @@
 
 pkgname=metadata-cleaner
 pkgver=2.5.6
-pkgrel=3
+pkgrel=4
 pkgdesc='Python GTK application to view and clean metadata in files, using mat2'
 arch=(any)
-url='https://apps.gnome.org/MetadataCleaner/'
+url='https://gitlab.com/rmnvgr/metadata-cleaner'
 license=(GPL-3.0-or-later)
 depends=(
   dconf
@@ -25,19 +25,19 @@ makedepends=(
 )
 source=(
   "git+https://gitlab.com/rmnvgr/metadata-cleaner.git?signed#tag=v$pkgver"
-  metadata-cleaner-window-icon.patch
+  metadata-cleaner-new-window.patch
 )
 b2sums=(
   c9131565149088f890f8d49395bcaa761928522fac2cbe2c1cf0063f65fb3fec78ee044828a48022ea9e19d78afd603ff3080223d9e87f9f6469bf3564aba52c
-  1582ad698ae4a845c5d976d8cdcd59d5b096756d634725b7982c11a4150ac892b1efb8ab74ee5075ab1b945b606a43dfb71bb0b92624c8e73289af22fd49e6fd
+  82cc6763153bf2a36eb332be729579f908a370552c5e75990a5d9bf9c3d20cae41f21a00a0ce15ac53f7fc746f667f1ae195b5f86d92ce44cc217a8ea0285270
 )
 validpgpkeys=(8E6737F5943A27EECEBE14528C66D1CA798D512D) # Romain Vigier <romain@romainvigier.fr>
 
 prepare() {
   cd $pkgname
 
-  # https://gitlab.com/rmnvgr/metadata-cleaner/-/merge_requests/281
-  git apply -3 ../metadata-cleaner-window-icon.patch
+  # Add "new-window" command-line option
+  git apply -3 ../metadata-cleaner-new-window.patch
 }
 
 build() {
